# WipeCore

./: Cargo.toml  README.md
src/: cli.rs  main.rs  util.rs  win.rs  wipe.rs
