[package]
name = "wipecore"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }